# quant-journal

./: .clang-format  .gitignore  .markdownlint.jsonc  CLAUDE.md  README.md
.claude/commands/: wrap-up.md
Books/: Modelling, Pricing, and Hedging Counterparty Credit Exposure: A Technical Guide.md  The Mathematics of Financial Markets Within Everyone's Reach.md
Log/: Ideas.md
Log/2026/: 05-28-2026.md  05-29-2026.md  05-30-2026.md
Log/2026/05/: Week 22.md
articles/: Don't Outsource the Learning.md
books/: Modelling-Pricing-and-Hedging-Counterparty-Credit-Exposure.md  Modern-Computational-Finance-AAD-and-Parallel-Simulations.md  The-Mathematics-of-Financial-Markets-Within-Everyones-Reach.md
code/cpp/: CMakeLists.txt  mc_engine.h
code/cpp/src/: monteCarloEngine.cpp  monteCarloEngine.h
code/cpp/src/common/: mathFunctions.h  mathFunctions.hpp  modelParameters.h  optionParameters.h  optionParameters.hpp  pathGeneration.hpp  pdeParameters.hpp  simulationParameters.hpp  vectorUtils.hpp
code/cpp/src/engine/: blackScholesCloseForm.cpp  blackScholesCloseForm.h  blackScholesCloseForm.hpp  blackScholesEngine.cpp  blackScholesEngine.h  chooserEngine.cpp  chooserEngine.hpp  engine.h  engine.hpp  monteCarloEngine.cpp  monteCarloEngine.h  monteCarloEngine.hpp  pdeEngine.cpp  pdeEngine.hpp
code/cpp/src/product/: chooserEuropeanOption.cpp  chooserEuropeanOption.h  chooserEuropeanOption.hpp  digitalEuropeanOption.cpp  digitalEuropeanOption.h  digitalEuropeanOption.hpp  instrument.cpp  instrument.h  instrument.hpp  vanillaEuropeanOption.cpp  vanillaEuropeanOption.h  vanillaEuropeanOption.hpp
code/cpp/tests/: monteCarloEngine.cpp  monteCarloEngine.test
code/cpp/tests/integration/engine/: chooserEngine.cpp
code/cpp/tests/unit/: monteCarloEngine.cpp
code/cpp/tests/unit/common/: mathFunctions.cpp  vectorUtils.cpp
code/cpp/tests/unit/engine/: blackScholesCloseForm.cpp  monteCarloEngine.cpp  monteCarloEngine.test  pdeEngine.cpp
code/cpp/tests/unit/product/: chooserEuropeanOption.cpp  digitalEuropeanOption.cpp  instrument.cpp  vanillaEuropeanOption.cpp
log/: Ideas.md
log/2026/: 05-28-2026.md  05-29-2026.md  05-30-2026.md  05-31-2026.md  06-01-2026.md  06-02-2026.md  06-03-2026.md  06-04-2026.md  06-05-2026.md
log/2026/05-May/: 05-28-2026.md  05-29-2026.md  05-30-2026.md  05-31-2026.md
log/2026/06-Jun/: 06-01-2026.md  06-02-2026.md  06-03-2026.md  06-04-2026.md  06-05-2026.md  06-06-2026.md  06-07-2026.md  06-08-2026.md  06-09-2026.md  06-10-2026.md  06-11-2026.md  06-12-2026.md  06-13-2026.md  06-14-2026.md  06-15-to-06-19-2026.md  06-20-2026.md  06-21-2026.md  06-22-2026.md  06-23-2026.md  06-24-2026.md  06-25-2026.md  06-27-2026.md
notes/engines/: engine-instrument-architecture.md  pde-engine.md  pde-fd-coefficients.md
notes/engines/pde/: pde-boundary-conditions.md  pde-engine.md  pde-neumann2nd-derivation.md
notes/products/: chooser-option.md  digital-option.md
notes/random-notes/: black-scholes-formula.md  gbm-expectation.md  normal-cdf-erf.md  stochastic-exponential.md
scripts/: new-daily-log.sh  run_cpp_test.sh  run_test_with_coverage.sh
videos/: Interfaces vs Abstract Classes, Inheritance | Programming concept overview.md
